# llama-index

./: README.md
llamaIndex_project/: .env  ingestion_pipeline_cached.py  llamaindex-helloworld.py  pyproject.toml
llamaIndex_project/chroma_db/: chroma.sqlite3
llamaIndex_project/chroma_db_cached/: chroma.sqlite3
llamaIndex_project/data/: hrishi.txt
llamaIndex_project/llamaindex-docs/: chromadb_basics.txt  embeddings_explained.txt  node_parsing.txt  ollama_overview.txt  query_engines.txt  retrieval_augmented_generation.txt  test.txt  vector_databases.txt  what_is_llamaindex.txt
llamaIndex_project/pipeline_cache/: docstore.json
