[project]
name = "llamaindex-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv-python>=0.0.1",
    "llama-index>=0.14.16",
    "llama-index-core>=0.14.16",
    "llama-index-llms-ollama>=0.9.1",
    "python-dotenv>=1.2.1",
]
